[tool.poetry]
name = "gachalifebeta10-tool"
version = "0.1.0"
description = "Gacha Life PC save tool"
license = "MIT"
authors = ["dogtopus <dogtopus@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Mini-AMF = "^0.9.1"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
mypy = "^1.6.0"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
